--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 makecode:
-  home_url: https://makecode.com/
-theme: jekyll-theme-cayman
+  target: microbit
+  platform: microbit
+  home_url: https://makecode.microbit.org/
+theme: jekyll-theme-slate
+include:
+  - assets
+  - README.md
